--- a/shop/templates/shop/item_list.html
+++ b/shop/templates/shop/item_list.html
@@ -1,15 +1,24 @@
-<table>
-    <tbody>
-    {% for item in item_list %}
-        <tr>
-            <td>{{ item.id }}</td>
-            <td>
-                {{ item.name }}<br/>
-                {{ item.price }}<br/>
-                {{ item.desc }}
-            </td>
-            <td>{{ item.updated_at }}</td>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
+{#<table>#}
+{#    <tbody>#}
+{#    {% for item in item_list %}#}
+{#        <tr>#}
+{#            <td>{{ item.id }}</td>#}
+{#            <td>#}
+{#                {{ item.name }}<br/>#}
+{#                {{ item.price }}<br/>#}
+{#                {{ item.desc }}#}
+{#            </td>#}
+{#            <td>{{ item.updated_at }}</td>#}
+{#        </tr>#}
+{#    {% endfor %}#}
+{#    </tbody>#}
+{#</table>#}
+
+<html>
+<head>
+
+</head>
+<body>
+asdasd
+</body>
+</html>
