--- a/shop/templates/shop/item_list.html
+++ b/shop/templates/shop/item_list.html
@@ -1,24 +1,14 @@
-{#<table>#}
-{#    <tbody>#}
-{#    {% for item in item_list %}#}
-{#        <tr>#}
-{#            <td>{{ item.id }}</td>#}
-{#            <td>#}
-{#                {{ item.name }}<br/>#}
-{#                {{ item.price }}<br/>#}
-{#                {{ item.desc }}#}
-{#            </td>#}
-{#            <td>{{ item.updated_at }}</td>#}
-{#        </tr>#}
-{#    {% endfor %}#}
-{#    </tbody>#}
-{#</table>#}
-
-<html>
-<head>
-
-</head>
-<body>
-asdasd
-</body>
-</html>
+<form action="" method="GET">
+    <input type="text" name="q" value=”{{ q }}" />
+    <input type="submit" value="검색" />
+</form>
+<hr/>
+{% for item in item_list %}
+    <div>
+        <h3>{{ item.name }}</h3>
+        <h4>가격: {{ item.price }}</h4>
+        {% if item.desc %}
+            <p>{{ item.desc }}</p>
+        {% endif %}
+    </div>
+{% endfor %}
