--- a/shop/templates/shop/item_list.html
+++ b/shop/templates/shop/item_list.html
@@ -1,22 +1,22 @@
-<html>
-<head>
-    <title>SHOP </title>
-</head>
-<body>
+{%  extends "shop/layout.html" %}
+
+{% block content %}
 <form action="" method="GET">
     <input type="text" name="q" value=”{{ q }}" />
     <input type="submit" value="검색" />
 </form>
 <hr/>
+<ul>
 {% for item in item_list %}
-    <div>
-        <h3>{{ item.name }}</h3>
+    <li>
+        <a href="/shop/{{  item.pk }}">
+          <h3>{{ item.name }}</h3>
+        </a>
         <h4>가격: {{ item.price }}</h4>
         {% if item.desc %}
             <p>{{ item.desc }}</p>
         {% endif %}
-    </div>
+    </li>
 {% endfor %}
-
-</body>
-</html>
+</ul>
+{% endblock %}
