--- a/askdjango/templates/layout.html
+++ b/askdjango/templates/layout.html
@@ -1,4 +1,4 @@
-{%  load static %}
+{%  load static fresh_static %}
 
 <html>
 <head>
@@ -8,6 +8,7 @@
     </style>
 {% block extra_head %}
 
+<link rel="stylesheet" href="{% fresh_static "main.css"%}"/>
 {%  endblock %}
 </head>
     <body>
