--- a/shop/templates/shop/item_detail.html
+++ b/shop/templates/shop/item_detail.html
@@ -19,5 +19,7 @@
     {% endif %}
 
     <hr/>
-    <a href="/shop/">목록</a>
+    <a href="{%  url "shop:item_list" %}">목록</a>
+    <a href="{%  url "shop:item_edit" item.pk %}">수정</a>
+
 {% endblock %}
